--- a/index.css
+++ b/index.css
@@ -1,3 +1,57 @@
-#heading{
-    color: brown;
+.header{
+    background-color :rgb(249, 244, 237);
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid;
+    align-items: center;
+}
+
+.logo{
+    width: 140px;
+}
+
+.nav-items > ul{
+    display: flex;
+    padding: 0 20px;
+    font-size: 18px;
+}
+.nav-items >ul >li{
+    list-style-type: none;
+    padding: 10px;
+    margin: 10px;
+    padding-right: 20px;
+}
+.body{
+    padding: 20px;
+}
+.search{
+    font-size: 20px;
+    font-family: 'Courier New', Courier, monospace;
+    text-decoration: underline;
+    justify-content: center;
+    display: flex;
+}
+.res-card{
+    width: 200px;
+    background-color: rgb(248, 248, 248);
+    padding: 5px;
+    border: 1px solid;
+    margin: 10px;
+    overflow: auto;
+    
+}
+.res-card:hover{
+    box-shadow: 3px 6px 9px rgba(0,0,0,.3);
+}
+.res-logo{
+    width: 100%;
+    height: 150px;
+    
+}
+.res-container{
+    display: flex;
+    flex-wrap: wrap;
+    display: flex;
+    justify-content: flex-start;
+    
 }
