--- a/index.css
+++ b/index.css
@@ -49,9 +49,35 @@
     
 }
 .res-container{
-    display: flex;
     flex-wrap: wrap;
     display: flex;
-    justify-content: flex-start;
+    justify-content:start;
+    /* justify-content:space-evenly; */
     
+}
+.filter-btn{
+    cursor: pointer;
+}
+.shimmer-container{
+    flex-wrap: wrap;
+    display: flex;
+    justify-content:start;
+}
+.shimmer-card{
+    width: 200px;
+    height: 350px;
+    background-color:#f0f0f0;
+    padding: 5px;
+    margin: 10px;
+    overflow: auto;
+}
+.login-btn{
+    padding: 0 20px;
+}
+.search-box{
+    margin: 0 10px;
+}
+.search-btn{
+    padding: 1px 10px;
+    margin: 0 10px;
 }
