--- a/index.css
+++ b/index.css
@@ -81,3 +81,9 @@
     padding: 1px 10px;
     margin: 0 10px;
 }
+
+.user-card{
+    padding: 10px;
+    border: 1px solid black;
+    width: 200px; 
+} 
